--- a/src/app/pages/product/product-detail/product-detail.component.scss
+++ b/src/app/pages/product/product-detail/product-detail.component.scss
@@ -98,3 +98,24 @@ ion-searchbar.custom-search {
     background-color: white;
   }
 }
+
+.disabled {
+  filter: grayscale(0.8);
+  opacity: 0.8;
+
+  &>.out-of-stock {
+    position: absolute;
+    font-weight: 600;
+    font-size: 25px;
+    border-radius: 15px;
+    background-color: #b4b4b4;
+    padding: 3px 6px;
+    color: white;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 70px;
+    width: 200px;
+    text-align: center;
+  }
+}
