--- a/src/app/shared/common/item-list/item-list.component.html
+++ b/src/app/shared/common/item-list/item-list.component.html
@@ -7,14 +7,14 @@
       <img [routerLink]="['/product/detail', cart?.product?.product_id || cart?.product_id]"
         [src]="cart?.product?.image_url || cart?.image_url" alt="product_image" />
     </ion-col>
-    <ion-col size="10">
-      <ion-row class="ion-no-padding">
+    <ion-col size="10" class="ion-padding-start">
+      <ion-row>
         <ion-col size="12" class="ion-no-padding">
           <span class="product-name"><b>{{ cart?.product?.name || cart?.name }}</b></span>
         </ion-col>
       </ion-row>
       <ion-row class="ion-align-items-center ion-justify-content-center">
-        <ion-col [size]="showSubstract ? '4' : '6'" class="ion-no-padding">
+        <ion-col [size]="showSubstract ? '8' : '8'" class="ion-no-padding">
           <!-- <span class="product-brand">{{ cart?.product?.brand?.name || cart?.brand?.name }}</span> -->
           <div class="product-price">
             {{ cart?.product?.secondary_price || cart?.secondary_price | currency: 'Rp. ' }}
@@ -36,12 +36,12 @@
             </ion-col>
           </ion-row>
         </ion-col>
-        <ion-col [size]="showSubstract ? '4' : '6'" class="ion-no-padding ion-text-right" *ngIf="showSubstract">
+        <!-- <ion-col [size]="showSubstract ? '4' : '6'" class="ion-no-padding ion-text-right" *ngIf="showSubstract">
           <ion-text color="dark">
             <span><b>Rp. {{ cart?.local_subtotal_price || cart?.local_subtotal_price | number }}</b></span>
           </ion-text>
-        </ion-col>
-        <ion-col [size]="showSubstract ? '4' : '6'" class="ion-no-padding ion-text-right" *ngIf="!showSubstract">
+        </ion-col> -->
+        <ion-col [size]="showSubstract ? '4' : '4'" class="ion-no-padding ion-text-right" *ngIf="!showSubstract">
           <ion-text color="dark">
             <span>x <b>{{ cart?.quantity || cart?.transaction_products?.quantity }}</b></span>
           </ion-text>
