--- a/src/global.scss
+++ b/src/global.scss
@@ -198,6 +198,15 @@ ion-item {
   border-radius: 0.5em;
 }
 
+.my-custom-class .modal-wrapper{
+  height: 20%;
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  display: block;
+  border-radius: 0.5em;
+}
+
 .font-md {
   font-size: 13px;
 }
