--- a/src/app/pages/payment/payment-instruction/payment-instruction.component.html
+++ b/src/app/pages/payment/payment-instruction/payment-instruction.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons mode="md" class="ion-text-center">
-      <ion-back-button defaultHref="/payment" icon="chevron-back-outline"> </ion-back-button>
+      <ion-back-button [defaultHref]="previousUrl" icon="chevron-back-outline"> </ion-back-button>
       <ion-title class="header-title center-with-back">{{ 'MANUAL_BANK_TRANSFER' | translate }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
@@ -14,7 +14,7 @@
       </ion-text>
     </ion-col>
     <ion-col size="12">
-      <ion-text class="text-price"> Rp. 76.700 </ion-text>
+      <ion-text class="text-price"> Rp. {{ paymentSummary?.final_price | number: '1.0-0':'id' }}</ion-text>
     </ion-col>
   </ion-row>
   <div class="divider"></div>
