--- a/src/app/pages/payment/payment-list/payment-list.component.html
+++ b/src/app/pages/payment/payment-list/payment-list.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons mode="md" class="ion-text-center">
-      <ion-back-button defaultHref="/checkout" icon="chevron-back-outline"> </ion-back-button>
+      <ion-back-button [defaultHref]="previousUrl" icon="chevron-back-outline"> </ion-back-button>
       <ion-title class="header-title center-with-back">{{ 'PAYMENT' | translate }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
@@ -14,7 +14,7 @@
       </ion-text>
     </ion-col>
     <ion-col size="12">
-      <ion-text class="text-price"> Rp. 76.700 </ion-text>
+      <ion-text class="text-price"> Rp. {{ paymentSummary?.final_price | number: '1.0-0':'id' }} </ion-text>
     </ion-col>
   </ion-row>
   <div class="divider"></div>
@@ -23,18 +23,9 @@
       <ion-list-header>
         <ion-label class="text-label"> {{ 'PAY_METHOD' | translate }} </ion-label>
       </ion-list-header>
-
-      <ion-item lines="none">
-        <ion-label class="text-label">{{ 'ONLINE_BANK' | translate }}</ion-label>
-        <ion-radio value="online_bank" slot="start" color="success"></ion-radio>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label class="text-label">{{ 'CASH_ON_DELIVERY' | translate }}</ion-label>
-        <ion-radio value="cod" slot="start" color="success"></ion-radio>
-      </ion-item>
-      <ion-item lines="none">
-        <ion-label class="text-label">{{ 'MANUAL_BANK_TRANSFER' | translate }}</ion-label>
-        <ion-radio value="manual_bank" slot="start" color="success"></ion-radio>
+      <ion-item lines="none" *ngFor="let item of paymentMethods">
+        <ion-label class="text-label">{{ item.name }}</ion-label>
+        <ion-radio [value]="item.payment_method_id" slot="start" color="success"></ion-radio>
       </ion-item>
     </ion-radio-group>
   </ion-list>
