--- a/src/app/shared/common/modals/modal-filter-product/modal-filter-product.component.html
+++ b/src/app/shared/common/modals/modal-filter-product/modal-filter-product.component.html
@@ -20,23 +20,32 @@
     <ion-row class="ion-no-padding">
       <ion-col class="ion-no-padding">
         <ion-text class="filter-label">
-          <b>{{ 'PRICE_RANGE' | translate }}</b><br/>
+          <b>{{ 'PRICE_RANGE' | translate }}</b
+          ><br />
           <span>Type in your preferred price range</span>
         </ion-text>
       </ion-col>
     </ion-row>
     <ion-row class="ion-no-padding">
       <ion-col size="5.5" class="ion-no-padding">
-        <ion-item style="--padding-start:0px">
-          <ion-input placeholder="{{ 'LOWEST' | translate }}" type="number" style="--padding-bottom:0px"></ion-input>
+        <ion-item style="--padding-start: 0px">
+          <ion-input
+            placeholder="{{ 'LOWEST' | translate }}"
+            [(ngModel)]="minPrice"
+            type="number"
+            style="--padding-bottom: 0px"
+          ></ion-input>
         </ion-item>
       </ion-col>
-      <ion-col size="1">
-
-      </ion-col>
+      <ion-col size="1"> </ion-col>
       <ion-col size="5.5" class="ion-no-padding">
-        <ion-item style="--padding-start:0px">
-          <ion-input placeholder="{{ 'HIGHEST' | translate }}" type="number" style="--padding-bottom:0px"></ion-input>
+        <ion-item style="--padding-start: 0px">
+          <ion-input
+            placeholder="{{ 'HIGHEST' | translate }}"
+            [(ngModel)]="maxPrice"
+            type="number"
+            style="--padding-bottom: 0px"
+          ></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
@@ -46,7 +55,7 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding-horizontal">
     <ion-col class="ion-padding-bottom">
-      <ion-button expand="full" shape="round" color="success" (click)="dismiss()">
+      <ion-button expand="full" shape="round" color="success" (click)="apply()">
         {{ 'APPLY' | translate }}
       </ion-button>
     </ion-col>
