--- a/src/app/shared/common/modals/modal-sort-product/modal-sort-product.component.html
+++ b/src/app/shared/common/modals/modal-sort-product/modal-sort-product.component.html
@@ -29,7 +29,7 @@
 <ion-footer class="ion-no-border">
   <ion-row class="ion-padding-horizontal">
     <ion-col class="ion-padding-bottom">
-      <ion-button expand="full" shape="round" color="success" (click)="dismiss()">
+      <ion-button expand="full" shape="round" color="success" (click)="apply()">
         {{ 'APPLY' | translate }}
       </ion-button>
     </ion-col>
