--- a/src/app/pages/payment/payment-proof/payment-proof.component.html
+++ b/src/app/pages/payment/payment-proof/payment-proof.component.html
@@ -1,7 +1,7 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons mode="md" class="ion-text-center">
-      <ion-back-button defaultHref="/my-order" icon="chevron-back-outline"> </ion-back-button>
+      <ion-back-button [defaultHref]="previousUrl" icon="chevron-back-outline"> </ion-back-button>
       <ion-title class="header-title center-with-back">{{ 'PAYMENT' | translate }}</ion-title>
     </ion-buttons>
   </ion-toolbar>
