--- a/src/app/pages/address/address-form/address-form.component.html
+++ b/src/app/pages/address/address-form/address-form.component.html
@@ -14,12 +14,8 @@
         <form [formGroup]="fg" *ngIf="fg">
           <ion-item lines="none" class="form-group">
             <ion-label position="stacked">{{ 'RECEIVER_NAME' | translate }}</ion-label>
-            <ion-input
-              class="default-theme"
-              placeholder="{{ 'RECEIVER_NAME_PLACEHOLDER' | translate }}"
-              type="text"
-              formControlName="receiver_name"
-            >
+            <ion-input class="default-theme" placeholder="{{ 'RECEIVER_NAME_PLACEHOLDER' | translate }}" type="text"
+              formControlName="receiver_name">
             </ion-input>
             <small *ngIf="fg.controls.receiver_name.dirty">
               {{ fg.controls.receiver_name.errors?.required?.message }}
@@ -28,17 +24,12 @@
 
           <ion-item lines="none" class="form-group">
             <ion-label position="stacked">{{ 'PHONE_NUMBER' | translate }}</ion-label>
-            <ion-input
-              class="default-theme"
-              placeholder="{{ 'PHONE_NUMBER_PLACEHOLDER' | translate }}"
-              type="tel"
-              formControlName="phone"
-            ></ion-input>
-            <small *ngIf="fg.controls.phone.dirty"
-              >{{ fg.controls.phone.errors?.required?.message }} {{ fg.controls.phone.errors?.numeric?.message }}
+            <ion-input class="default-theme" placeholder="{{ 'PHONE_NUMBER_PLACEHOLDER' | translate }}" type="tel"
+              formControlName="phone"></ion-input>
+            <small *ngIf="fg.controls.phone.dirty">{{ fg.controls.phone.errors?.required?.message }}
+              {{ fg.controls.phone.errors?.numeric?.message }}
               {{ fg.controls.phone.errors?.minLength?.message }}
-              {{ fg.controls.phone.errors?.maxLength?.message }}</small
-            >
+              {{ fg.controls.phone.errors?.maxLength?.message }}</small>
           </ion-item>
 
           <div class="divider"></div>
@@ -49,7 +40,7 @@
                 <small>
                   <b>{{ 'DELIVERY_ADDRESS' | translate }}</b>
                 </small>
-                </ion-text>
+              </ion-text>
             </ion-col>
             <ion-col size="6" class="ion-no-padding ion-text-right">
               <ion-button fill="outline" size="small" color="primary" (click)="presentModalPinLocation()">
@@ -63,18 +54,14 @@
 
           <ion-item lines="none" class="form-group">
             <ion-label position="stacked">{{ 'ADDRESS_DETAIL' | translate }}</ion-label>
-            <ion-textarea
-              placeholder="{{ 'ADDRESS_DETAIL_PLACEHOLDER' | translate }}"
-              formControlName="address_detail"
-              rows="6"
-            ></ion-textarea>
+            <ion-textarea placeholder="{{ 'ADDRESS_DETAIL_PLACEHOLDER' | translate }}" formControlName="address_detail"
+              rows="6"></ion-textarea>
             <ion-row class="ion-no-padding">
               <ion-col size="6" class="ion-no-padding">
-                <small *ngIf="fg.controls.address_detail.dirty"
-                  >{{ fg.controls.address_detail.errors?.required?.message }}
+                <small
+                  *ngIf="fg.controls.address_detail.dirty">{{ fg.controls.address_detail.errors?.required?.message }}
                   {{ fg.controls.address_detail.errors?.minLength?.message }}
-                  {{ fg.controls.address_detail.errors?.maxLength?.message }}</small
-                >
+                  {{ fg.controls.address_detail.errors?.maxLength?.message }}</small>
               </ion-col>
               <ion-col size="6" class="ion-no-padding ion-text-right">
                 <small class="count">{{ currentChar }} / 100</small>
@@ -86,11 +73,8 @@
             <ion-col size="6" class="ion-no-padding">
               <ion-item lines="none" class="form-group">
                 <ion-label position="stacked">{{ 'PROVINCE' | translate }}</ion-label>
-                <ion-select
-                  placeholder="{{ 'PROVINCE_PLACEHOLDER' | translate }}"
-                  formControlName="province_id"
-                  (ionChange)="onProvinceSelect($event?.detail?.value)"
-                >
+                <ion-select placeholder="{{ 'PROVINCE_PLACEHOLDER' | translate }}" formControlName="province_id"
+                  (ionChange)="onProvinceSelect($event?.detail?.value)">
                   <ion-select-option *ngFor="let province of provinceList" [value]="province?.province_id">{{
                     province?.name | titlecase
                   }}</ion-select-option>
@@ -103,11 +87,8 @@
             <ion-col size="6" class="ion-no-padding">
               <ion-item lines="none" class="form-group">
                 <ion-label position="stacked">{{ 'CITY' | translate }}</ion-label>
-                <ion-select
-                  placeholder="{{ 'CITY_PLACEHOLDER' | translate }}"
-                  formControlName="city_id"
-                  (ionChange)="onCitySelect($event?.detail?.value)"
-                >
+                <ion-select placeholder="{{ 'CITY_PLACEHOLDER' | translate }}" formControlName="city_id"
+                  (ionChange)="onCitySelect($event?.detail?.value)">
                   <ion-select-option *ngFor="let city of cityList" [value]="city?.city_id">{{
                     city?.name | titlecase
                   }}</ion-select-option>
@@ -121,7 +102,8 @@
             <ion-col size="6" class="ion-no-padding">
               <ion-item lines="none" class="form-group">
                 <ion-label position="stacked">{{ 'DISTRICT' | translate }}</ion-label>
-                <ion-select placeholder="{{ 'DISTRICT_PLACEHOLDER' | translate }}" formControlName="district_id">
+                <ion-select placeholder="{{ 'DISTRICT_PLACEHOLDER' | translate }}" formControlName="district_id"
+                  (ionChange)="onDistrictSelect($event?.detail?.value)">
                   <ion-select-option *ngFor="let district of districtList" [value]="district?.district_id">{{
                     district?.name | titlecase
                   }}</ion-select-option>
@@ -132,6 +114,19 @@
               </ion-item>
             </ion-col>
             <ion-col size="6" class="ion-no-padding">
+              <ion-item lines="none" class="form-group">
+                <ion-label position="stacked">{{ 'SUB_DISTRICT' | translate }}</ion-label>
+                <ion-select placeholder="{{ 'SUB_DISTRICT_PLACEHOLDER' | translate }}"
+                  formControlName="sub_district_id">
+                  <ion-select-option *ngFor="let subDistrict of subDistrictList"
+                    [value]="subDistrict?.sub_district_id">{{subDistrict?.name | titlecase }}</ion-select-option>
+                </ion-select>
+                <small *ngIf="fg.controls.sub_district_id.touched">{{
+                  fg.controls.sub_district_id.errors?.required?.message
+                }}</small>
+              </ion-item>
+            </ion-col>
+            <!-- <ion-col size="6" class="ion-no-padding">
               <ion-item lines="none" class="form-group">
                 <ion-label position="stacked">{{ 'POSTAL_CODE' | translate }}</ion-label>
                 <ion-input
@@ -144,17 +139,13 @@
                   fg.controls.postal_code.errors?.required?.message
                 }}</small>
               </ion-item>
-            </ion-col>
+            </ion-col> -->
           </ion-row>
 
           <ion-item lines="none" class="form-group">
             <ion-label position="stacked">{{ 'ADDRESS_NAME' | translate }}</ion-label>
-            <ion-input
-              class="default-theme"
-              placeholder="{{ 'ADDRESS_NAME_PLACEHOLDER' | translate }}"
-              type="text"
-              formControlName="address_name"
-            >
+            <ion-input class="default-theme" placeholder="{{ 'ADDRESS_NAME_PLACEHOLDER' | translate }}" type="text"
+              formControlName="address_name">
             </ion-input>
             <small *ngIf="fg.controls.address_name.dirty">{{
               fg.controls.address_name.errors?.required?.message
