--- a/src/app/pages/inbox/inbox-detail/inbox-detail.component.html
+++ b/src/app/pages/inbox/inbox-detail/inbox-detail.component.html
@@ -1,9 +1,11 @@
 <ion-header class="ion-no-border">
   <ion-toolbar mode="ios">
-    <ion-buttons slot="start" mode="md" class="title">
-      <ion-back-button icon="chevron-back" defaultHref="/tabs/inbox"></ion-back-button>
+    <ion-buttons slot="start" mode="md" class="title" (click)="dismiss()">
+      <ion-button>
+        <ion-icon slot="icon-only" name="chevron-back"></ion-icon>
+      </ion-button>
     </ion-buttons>
-    <ion-title class="title">{{ inbox?.title }}</ion-title>
+    <ion-title class="title">{{ inbox?.subject }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -11,15 +13,15 @@
   <ion-grid class="ion-no-padding">
     <ion-row>
       <ion-col>
-        <img class="img-banner" src="assets/images/placeholder-banner.png" />
+        <img class="img-banner" [src]="inbox?.global_notification?.image_url"/>
       </ion-col>
     </ion-row>
     <ion-row class="ion-padding">
-      <ion-col size="12">
-        <ion-text class="notif-title">{{ inbox?.title }} </ion-text>
+      <ion-col size="12" class="padding-time text-date">
+        <ion-text class="notif-time">{{ inbox?.notification_created_at | date: 'medium' }} </ion-text>
       </ion-col>
-      <ion-col size="12" class="padding-time">
-        <ion-text class="notif-time">{{ inbox?.date | date: 'medium' }} </ion-text>
+      <ion-col size="12" class="ion-padding-top">
+        <ion-text class="text-message">{{ inbox?.message }} </ion-text>
       </ion-col>
       <ion-col size="12" class="ion-text-justify">
         <ion-text class="notif-desc" [innerHtml]="inbox?.description"> </ion-text>
