--- a/src/app/shared/common/modal-pin-location/modal-pin-location.component.scss
+++ b/src/app/shared/common/modal-pin-location/modal-pin-location.component.scss
@@ -11,8 +11,22 @@
 }
 
 #map {
+  position: relative;
   width: 100%;
   height: 100vh;
+}
+
+#map:after {
+  width: 22px;
+  height: 40px;
+  display: block;
+  content: ' ';
+  position: absolute;
+  top: 50%; left: 50%;
+  margin: -40px 0 0 -11px;
+  background: url('https://maps.gstatic.com/mapfiles/api-3/images/spotlight-poi_hdpi.png');
+  background-size: 22px 40px; /* Since I used the HiDPI marker version this compensates for the 2x size */
+  pointer-events: none; /* This disables clicks on the marker. Not fully supported by all major browsers, though */
 }
 
 .map-wrapper {
