--- a/src/app/shared/common/item-list/item-list.component.html
+++ b/src/app/shared/common/item-list/item-list.component.html
@@ -4,13 +4,18 @@
 <ng-container *ngFor="let cart of cartData; let i = index">
   <ion-row class="ion-align-items-center ion-justify-content-center ion-margin-vertical">
     <ion-col size="2">
-      <img [routerLink]="['/product/detail', cart?.product?.product_id || cart?.product_id]"
-        [src]="cart?.product?.image_url || cart?.image_url" alt="product_image" />
+      <img
+        [routerLink]="['/product/detail', cart?.product?.product_id || cart?.product_id]"
+        [src]="cart?.product?.image_url || cart?.image_url"
+        alt="product_image"
+      />
     </ion-col>
     <ion-col size="10" class="ion-padding-start">
       <ion-row>
         <ion-col size="12" class="ion-no-padding">
-          <span class="product-name"><b>{{ cart?.product?.name || cart?.name }}</b></span>
+          <span class="product-name"
+            ><b>{{ cart?.product?.name || cart?.name }}</b></span
+          >
         </ion-col>
       </ion-row>
       <ion-row class="ion-align-items-center ion-justify-content-center">
@@ -26,13 +31,24 @@
         <ion-col size="4" class="ion-no-padding ion-text-center" *ngIf="showSubstract">
           <ion-row class="ion-align-items-center">
             <ion-col size="4">
-              <ion-icon name="remove-circle-outline" size="small" appDebounce (debounceClick)="updateQuantity(i)"
-                (click)="updateLocalQuantity(i, false)"></ion-icon>
+              <ion-icon
+                name="remove-circle-outline"
+                size="small"
+                appDebounce
+                (debounceClick)="updateQuantity(i)"
+                (click)="updateLocalQuantity(i, false)"
+              ></ion-icon>
             </ion-col>
             <ion-col size="4">{{ cart?.quantity }}</ion-col>
             <ion-col size="4">
-              <ion-icon name="add-circle-outline" size="small" appDebounce (debounceClick)="updateQuantity(i)"
-                (click)="updateLocalQuantity(i, true)"></ion-icon>
+              <ion-icon
+                name="add-circle-outline"
+                size="small"
+                [color]="compareQuantityWithStock(+cart?.quantity, +cart?.product?.stock) ? 'black' : 'medium'"
+                appDebounce
+                (debounceClick)="updateQuantity(i)"
+                (click)="updateLocalQuantity(i, true)"
+              ></ion-icon>
             </ion-col>
           </ion-row>
         </ion-col>
@@ -43,7 +59,9 @@
         </ion-col> -->
         <ion-col [size]="showSubstract ? '4' : '4'" class="ion-no-padding ion-text-right" *ngIf="!showSubstract">
           <ion-text color="dark">
-            <span>x <b>{{ cart?.quantity || cart?.transaction_products?.quantity }}</b></span>
+            <span
+              >x <b>{{ cart?.quantity || cart?.transaction_products?.quantity }}</b></span
+            >
           </ion-text>
         </ion-col>
       </ion-row>
