--- a/src/app/pages/register/register-step-two/register-step-two.component.html
+++ b/src/app/pages/register/register-step-two/register-step-two.component.html
@@ -71,7 +71,13 @@
               >
             </ion-col>
             <ion-col size="6" class="ion-no-padding ion-text-right">
-              <ion-button fill="outline" shape="round" size="small" color="secondary">
+              <ion-button
+                fill="outline"
+                shape="round"
+                size="small"
+                color="secondary"
+                (click)="presentModalPinLocation()"
+              >
                 {{ 'PIN_LOCATION' | translate }}
               </ion-button>
             </ion-col>
@@ -147,7 +153,11 @@
               <div class="form-group">
                 <ion-item lines="none">
                   <ion-label position="stacked">{{ 'DISTRICT' | translate }}</ion-label>
-                  <ion-select placeholder="{{ 'DISTRICT_PLACEHOLDER' | translate }}" formControlName="district_id">
+                  <ion-select
+                    placeholder="{{ 'DISTRICT_PLACEHOLDER' | translate }}"
+                    formControlName="district_id"
+                    (ionChange)="onDistrictSelect($event?.detail?.value)"
+                  >
                     <ion-select-option *ngFor="let district of districtList" [value]="district?.district_id">{{
                       district?.name | titlecase
                     }}</ion-select-option>
@@ -158,7 +168,29 @@
                 }}</small>
               </div>
             </ion-col>
+
             <ion-col size="6" class="ion-padding-start ion-no-padding">
+              <div class="form-group">
+                <ion-item lines="none">
+                  <ion-label position="stacked">{{ 'SUB_DISTRICT' | translate }}</ion-label>
+                  <ion-select
+                    placeholder="{{ 'SUB_DISTRICT_PLACEHOLDER' | translate }}"
+                    formControlName="sub_district_id"
+                  >
+                    <ion-select-option
+                      *ngFor="let subDistrict of subDistrictList"
+                      [value]="subDistrict?.sub_district_id"
+                      >{{ subDistrict?.name | titlecase }}</ion-select-option
+                    >
+                  </ion-select>
+                </ion-item>
+                <small *ngIf="fg.controls.sub_district_id.touched">{{
+                  fg.controls.sub_district_id.errors?.required?.message
+                }}</small>
+              </div>
+            </ion-col>
+
+            <!-- <ion-col size="6" class="ion-padding-start ion-no-padding">
               <div class="form-group">
                 <ion-item lines="none">
                   <ion-label position="stacked">{{ 'POSTAL_CODE' | translate }}</ion-label>
@@ -173,7 +205,7 @@
                   fg.controls.postal_code.errors?.required?.message
                 }}</small>
               </div>
-            </ion-col>
+            </ion-col> -->
           </ion-row>
 
           <div class="form-group">
