--- a/src/app/pages/checkout/checkout.page.html
+++ b/src/app/pages/checkout/checkout.page.html
@@ -185,8 +185,16 @@
         <span class="text-payment-info">{{'SELECT_VOUCHER' |translate}}</span>
       </ion-col>
       <ion-col size="6" class="ion-text-right">
-        <ion-icon name="checkmark-outline" *ngIf="voucher && voucher?.quota > 0"></ion-icon>
-        <ion-icon name="alert-outline" *ngIf=" voucher && voucher?.quota <= 0"></ion-icon>
+        <ion-icon
+          name="checkmark-outline"
+          color="success"
+          *ngIf="(voucher && voucher?.quota > 0) || voucherError"
+        ></ion-icon>
+        <ion-icon
+          name="alert-outline"
+          color="warning"
+          *ngIf="(voucher && voucher?.quota <= 0) || voucherError"
+        ></ion-icon>
 
         <span [routerLink]="['/voucher']" class="link">
           <small *ngIf="!voucher || !voucher?.voucher_code"> {{'USE_VOUCHER' | translate}} </small>
