Push notification init

--- a/src/app/pages/notification/notification-list/notification-list.component.html
+++ b/src/app/pages/notification/notification-list/notification-list.component.html
@@ -54,8 +54,7 @@
         <ion-grid>
           <ion-row
             *ngFor="let notif of notificationList"
-            class="ion-padding-bottom link ion-text-left"
-            (click)="openDetail(notif)">
+            class="ion-padding-bottom link ion-text-left">
             <ion-col size="2" class="ion-align-self-center">
               <ion-thumbnail class="thumb-notif">
                 <img src="assets/images/notif-logo.svg" />
