--- a/src/app/pages/cart/cart.page.scss
+++ b/src/app/pages/cart/cart.page.scss
@@ -21,3 +21,15 @@
   line-height: 1.33;
   color: #707070;
 }
+
+.text-unprocessable {
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 1.2;
+  color: #d61414;
+}
+
+.divider {
+  height: 2px;
+  background-color: #f5f5f5;
+}
