--- a/src/app/pages/checkout/checkout.page.scss
+++ b/src/app/pages/checkout/checkout.page.scss
@@ -2,6 +2,7 @@
   border: none;
   width: 100%;
   padding-left: 0;
+  padding-bottom: 0;
   margin-top: 0.5em;
   div {
     margin: auto;
@@ -71,4 +72,14 @@ small {
   line-height: 1.17;
   color: #454545;
   border: none;
+}
+
+.delivery-chip {
+  width: 100%;
+  padding: 2px;
+  font-size: 11px;
+  font-weight: 700;
+  & span {
+    width: 100%;
+  }
 }
