--- a/src/app/shared/common/cards/card-brand/card-brand.component.html
+++ b/src/app/shared/common/cards/card-brand/card-brand.component.html
@@ -3,7 +3,7 @@
     <ion-row>
       <ion-col size="12">
         <img [src]="brand.image_url" class="brand-icon" *ngIf="brand.image_url" />
-        <img src="https://via.placeholder.com/80.png" class="brand-icon rounded" *ngIf="!brand.image_url" />
+        <img src="https://via.placeholder.com/80.png" class="brand-icon" *ngIf="!brand.image_url" />
       </ion-col>
       <ion-col size="12">
         <ion-text class="brand-name">{{ brand.name | titlecase }}</ion-text>
