--- a/src/app/shared/common/item-list-inactive/item-list-inactive.component.scss
+++ b/src/app/shared/common/item-list-inactive/item-list-inactive.component.scss
@@ -59,3 +59,10 @@
 .grayed-out {
   filter: grayscale(100%) !important;
 }
+
+.text-unprocessable {
+  font-size: 11px;
+  font-weight: 600;
+  line-height: 1.2;
+  color: #d61414;
+}
