--- a/src/app/shared/common/modals/modal-share-app/modal-share-app.component.html
+++ b/src/app/shared/common/modals/modal-share-app/modal-share-app.component.html
@@ -27,13 +27,16 @@
         {{ 'SHARE_MESSAGE' | translate }}
       </ion-text>
     </ion-col>
-    <ion-col size="12">
-      <ion-item>
-        <ion-input [value]="shareLink" disabled></ion-input>
-        <ion-button slot="end" (click)="copyLink()">
-          <ion-icon name="copy"></ion-icon>
-        </ion-button>
+    <ion-col size="12" class="ion-padding-horizontal">
+      <ion-item lines="none">
+        <div [innerHTML]="shareLink" class="share-copy"></div>
       </ion-item>
     </ion-col>
   </ion-row>
+  <ion-row>
+    <ion-col class="ion-text-center">
+      <ion-button color="success" shape="round" (click)="copyLink()">Copy</ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
+
