--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,4 +1,4 @@
-<ion-tabs #tabs (ionTabsDidChange)="setCurrentTab()">
+<ion-tabs #tabs (ionTabsDidChange)="setCurrentTab(tabs)">
   <ion-tab-bar slot="bottom">
     <ion-tab-button *ngFor="let menu of menus" [tab]="menu.route">
       <ion-icon [name]="menu?.selected"></ion-icon>
