implement maintenance modal

--- a/src/app/pages/register/register-step-two/register-step-two.component.html
+++ b/src/app/pages/register/register-step-two/register-step-two.component.html
@@ -180,7 +180,7 @@
                     <ion-select-option
                       *ngFor="let subDistrict of subDistrictList"
                       [value]="subDistrict?.sub_district_id"
-                      >{{ subDistrict?.name | titlecase }}</ion-select-option
+                      >{{ subDistrict?.name + ' - ' + subDistrict?.postal_code | titlecase }}</ion-select-option
                     >
                   </ion-select>
                 </ion-item>
